# Parallel-simulation-of-multi-agent-systems-behavior

./: LICENSE  README.md  base_baseline_algorithn.py  base_proposed_algorithm.py  config.py  constraint_generator.py  constraints_evaluation.py  cycle_test_case.py  ipc_utilities.py  logging_manager.py  main.py  nets_generator.py  pyproject.toml  requirements.txt  run_comparison.py  visualization.py  workflow_baseline_algorithm.py  workflow_proposed_algorithm.py
baseline_algorithms/: base_baseline_algorithn.py  workflow_baseline_algorithm.py
benchmark_results/data/: classic_i_times_10_10000.txt  classic_i_times_4_1000.txt  classic_i_times_6_1000.txt  experiment_proposed_init_10.txt  experiment_proposed_init_2.txt  experiment_proposed_init_4.txt  experiment_proposed_init_6.txt  proposed_12_workers_1000.txt  proposed_14_workers_1000.txt  proposed_16_workers_1000.txt  proposed_2_workers_1000.txt  proposed_4_workers_1000.txt  proposed_5_workers_1000.txt  proposed_6_workers_1000.txt  proposed_8_workers_1000.txt  proposed_algorithm_results_10.txt  proposed_algorithm_results_100.txt  proposed_algorithm_results_1000.txt  proposed_i_times_10_10000.txt  proposed_i_times_4_1000.txt  proposed_init_analyze_10_per_agent.txt  proposed_init_analyze_2_per_agent.txt  proposed_no_init_i_times_4_1000.txt  proposed_precheck_movements.txt
benchmark_utilities/: constraint_generator.py  cycle_test_case.py  nets_generator.py  run_benchmark.py  visualization.py
benchs/data/: classic_algorithm_results_10.txt  classic_algorithm_results_100.txt  classic_algorithm_results_1000.txt  (+1 more)
