[project]
name = "parallel-simulation-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gevent==24.10.3",
    "gipc==1.7.0",
    "lark==1.2.2",
    "matplotlib==3.8.0",
    "networkx==3.1",
    "numpy==1.26.4",
    "snakes==0.9.33",
]
